Adjusts on new reports view controller

--- a/Challenge-Final/Challenge-Final/Base.lproj/Main.storyboard
+++ b/Challenge-Final/Challenge-Final/Base.lproj/Main.storyboard
@@ -5,7 +5,7 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -30,13 +30,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="gDW-JI-eGE">
-                                <rect key="frame" x="58" y="104" width="204" height="142"/>
+                                <rect key="frame" x="58" y="124" width="204" height="142"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="gDW-JI-eGE" secondAttribute="height" multiplier="240:167" id="kft-tS-mue"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XTl-6v-oZu" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
-                                <rect key="frame" x="36" y="286" width="248" height="40"/>
+                                <rect key="frame" x="36" y="306" width="248" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="1mr-OA-E2N"/>
                                 </constraints>
@@ -67,7 +67,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="D0F-ik-q0a" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
-                                <rect key="frame" x="36" y="341" width="248" height="40"/>
+                                <rect key="frame" x="36" y="361" width="248" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="aA2-sR-Mi3"/>
                                 </constraints>
@@ -101,7 +101,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EY0-vS-or1">
-                                <rect key="frame" x="142" y="391" width="142" height="30"/>
+                                <rect key="frame" x="142" y="411" width="142" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="6VC-DC-wNb"/>
                                 </constraints>
@@ -925,14 +925,14 @@
                                 </constraints>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BKv-GT-VTd">
-                                <rect key="frame" x="36" y="144" width="248" height="1"/>
+                                <rect key="frame" x="36" y="109" width="248" height="1"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="0rg-aY-wjS"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descrição" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R7V-r4-jrv">
-                                <rect key="frame" x="36" y="104" width="248" height="40"/>
+                                <rect key="frame" x="36" y="69" width="248" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="VMJ-JD-WKv"/>
                                 </constraints>
@@ -941,7 +941,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hKe-oz-AC3">
-                                <rect key="frame" x="36" y="155" width="248" height="170.5"/>
+                                <rect key="frame" x="36" y="120" width="248" height="170.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -949,14 +949,14 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1se-pC-7Br">
-                                <rect key="frame" x="36" y="375.5" width="248" height="1"/>
+                                <rect key="frame" x="36" y="340.5" width="248" height="1"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="lfH-Q9-TFY"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anexos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l6u-AI-vqa">
-                                <rect key="frame" x="36" y="335.5" width="248" height="40"/>
+                                <rect key="frame" x="36" y="300.5" width="248" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="3AF-pP-26I"/>
                                 </constraints>
@@ -965,7 +965,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Não há fotos anexadas" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FYX-tp-fQQ">
-                                <rect key="frame" x="56" y="426.5" width="208" height="24"/>
+                                <rect key="frame" x="56" y="391.5" width="208" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="BRu-Tf-rV4"/>
                                 </constraints>
@@ -994,7 +994,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="1se-pC-7Br" secondAttribute="trailing" constant="20" id="j0z-0F-93F"/>
                             <constraint firstItem="1se-pC-7Br" firstAttribute="leading" secondItem="dBw-sN-sD7" secondAttribute="leadingMargin" constant="20" id="jDW-YW-9CC"/>
                             <constraint firstItem="FYX-tp-fQQ" firstAttribute="leading" secondItem="dBw-sN-sD7" secondAttribute="leadingMargin" constant="40" id="m2Y-po-8N5"/>
-                            <constraint firstItem="R7V-r4-jrv" firstAttribute="top" secondItem="jf0-sr-vRt" secondAttribute="bottom" constant="40" id="mVY-mt-vz7"/>
+                            <constraint firstItem="R7V-r4-jrv" firstAttribute="top" secondItem="jf0-sr-vRt" secondAttribute="bottom" constant="5" id="mVY-mt-vz7"/>
                             <constraint firstItem="vm7-JA-bGq" firstAttribute="leading" secondItem="dBw-sN-sD7" secondAttribute="leadingMargin" constant="20" id="nuK-tP-6I7"/>
                             <constraint firstItem="BKv-GT-VTd" firstAttribute="leading" secondItem="dBw-sN-sD7" secondAttribute="leadingMargin" constant="20" id="viP-z8-35n"/>
                             <constraint firstItem="l6u-AI-vqa" firstAttribute="leading" secondItem="dBw-sN-sD7" secondAttribute="leadingMargin" constant="20" id="yyI-nX-kdv"/>
@@ -1021,6 +1021,7 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <connections>
+                        <outlet property="attachmentLabel" destination="FYX-tp-fQQ" id="LAJ-72-c7S"/>
                         <outlet property="descTextView" destination="hKe-oz-AC3" id="oyR-qI-x9E"/>
                         <outlet property="statusLabel" destination="1Zu-Ke-67T" id="p6U-ys-kyP"/>
                         <segue destination="wvc-0X-2Ot" kind="unwind" unwindAction="unWindToViewControllerWithSender:" id="y7F-H2-UW9"/>
