--- a/Challenge-Final/Challenge-Final/Base.lproj/Main.storyboard
+++ b/Challenge-Final/Challenge-Final/Base.lproj/Main.storyboard
@@ -5,7 +5,7 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -261,6 +261,35 @@
                 <exit id="oPE-a5-dWw" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2612" y="-512"/>
+        </scene>
+        <!--PopupViewController-->
+        <scene sceneID="TsR-5t-WhE">
+            <objects>
+                <viewController storyboardIdentifier="PopupViewController" title="PopupViewController" id="0GI-og-LI2" customClass="PopUpViewController" customModule="Challenge_Final" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VRr-mY-7ka"/>
+                        <viewControllerLayoutGuide type="bottom" id="qCU-tM-pqV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="AWe-yT-xWG">
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mia-xZ-V0E">
+                                <rect key="frame" x="191" y="47" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="extiBtnAction:" destination="0GI-og-LI2" eventType="touchUpInside" id="kj1-Ra-rd5"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <size key="freeformSize" width="300" height="300"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EnN-zg-RSk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3473" y="-690"/>
         </scene>
         <!--Register View Controller-->
         <scene sceneID="otE-p1-qGl">
@@ -925,14 +954,14 @@
                                 </constraints>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BKv-GT-VTd">
-                                <rect key="frame" x="36" y="109" width="248" height="1"/>
+                                <rect key="frame" x="36" y="129" width="248" height="1"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="0rg-aY-wjS"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descrição" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R7V-r4-jrv">
-                                <rect key="frame" x="36" y="69" width="248" height="40"/>
+                                <rect key="frame" x="36" y="89" width="248" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="VMJ-JD-WKv"/>
                                 </constraints>
@@ -941,7 +970,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hKe-oz-AC3">
-                                <rect key="frame" x="36" y="120" width="248" height="159"/>
+                                <rect key="frame" x="36" y="140" width="248" height="159"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -949,14 +978,14 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1se-pC-7Br">
-                                <rect key="frame" x="36" y="329" width="248" height="1"/>
+                                <rect key="frame" x="36" y="349" width="248" height="1"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="lfH-Q9-TFY"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anexos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l6u-AI-vqa">
-                                <rect key="frame" x="36" y="289" width="248" height="40"/>
+                                <rect key="frame" x="36" y="309" width="248" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="3AF-pP-26I"/>
                                 </constraints>
@@ -965,7 +994,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Não há fotos anexadas" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FYX-tp-fQQ">
-                                <rect key="frame" x="56" y="380" width="208" height="24"/>
+                                <rect key="frame" x="56" y="400" width="208" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="BRu-Tf-rV4"/>
                                 </constraints>
@@ -1291,6 +1320,7 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                                 <connections>
+                                                    <action selector="categoryBtnAction:" destination="dDb-0Q-25a" eventType="touchUpInside" id="fPK-Ns-XAP"/>
                                                     <action selector="signupButton:" destination="qH6-vk-sPU" eventType="touchUpInside" id="mET-Zz-oQf"/>
                                                 </connections>
                                             </button>
