--- a/Challenge-Final/Challenge-Final/Base.lproj/Main.storyboard
+++ b/Challenge-Final/Challenge-Final/Base.lproj/Main.storyboard
@@ -305,7 +305,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="7wa-HU-97U">
-                                <rect key="frame" x="30" y="69" width="260" height="272.5"/>
+                                <rect key="frame" x="30" y="25" width="260" height="272.5"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4wN-sO-4we" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                         <rect key="frame" x="0.0" y="0.0" width="260" height="45.5"/>
@@ -524,7 +524,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Escolha seu avatar" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Op-nu-jnU">
-                                <rect key="frame" x="36" y="351.5" width="248" height="30"/>
+                                <rect key="frame" x="36" y="307.5" width="248" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="r81-9g-ga1"/>
                                 </constraints>
@@ -568,6 +568,7 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <connections>
+                        <outlet property="avatarLabel" destination="1Op-nu-jnU" id="DRf-wy-6Zi"/>
                         <outlet property="confirmPasswordTextField" destination="WI4-mk-sHe" id="k3f-kz-8Rs"/>
                         <outlet property="emailTextField" destination="NO4-2M-gi2" id="y0g-h5-Dbm"/>
                         <outlet property="nameTextField" destination="U5K-7I-yCN" id="XSE-jq-llS"/>
@@ -613,7 +614,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Aa-yT-6nv">
-                                <rect key="frame" x="36" y="247.5" width="248" height="85"/>
+                                <rect key="frame" x="36" y="203.5" width="248" height="85"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oHz-js-DeL" customClass="CustomButton" customModule="Challenge_Final" customModuleProvider="target">
                                         <rect key="frame" x="8" y="8" width="232" height="69"/>
@@ -661,7 +662,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wYw-fs-2Cy">
-                                <rect key="frame" x="36" y="352.5" width="248" height="85.5"/>
+                                <rect key="frame" x="36" y="308.5" width="248" height="85.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JEF-KF-FNM" customClass="CustomButton" customModule="Challenge_Final" customModuleProvider="target">
                                         <rect key="frame" x="8" y="8" width="232" height="69.5"/>
@@ -731,7 +732,7 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="16u-AZ-hDu">
-                                <rect key="frame" x="36" y="84" width="248" height="113.5"/>
+                                <rect key="frame" x="36" y="40" width="248" height="113.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="joT-xr-DL3">
                                         <rect key="frame" x="0.0" y="0.0" width="248" height="113.5"/>
@@ -739,7 +740,7 @@
                                             <action selector="profileEdit:" destination="Q8z-5s-6AC" eventType="touchUpInside" id="CUx-MN-IYr"/>
                                         </connections>
                                     </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar2" translatesAutoresizingMaskIntoConstraints="NO" id="cfB-KC-woS">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar0" translatesAutoresizingMaskIntoConstraints="NO" id="cfB-KC-woS">
                                         <rect key="frame" x="0.0" y="29" width="55.5" height="55.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="cfB-KC-woS" secondAttribute="height" multiplier="1:1" id="d3X-So-c0D"/>
@@ -831,6 +832,7 @@
                         <outlet property="nameLabel" destination="eBJ-NR-dAT" id="Xge-Qc-5Cj"/>
                         <outlet property="serieLabel" destination="Yhk-Xd-s07" id="DlA-uK-SOt"/>
                         <segue destination="Kz8-Am-8Hf" kind="unwind" unwindAction="unWindToViewControllerWithSender:" id="bGg-Ql-GaZ"/>
+                        <segue destination="qH6-vk-sPU" kind="show" identifier="mainToSignup" id="8RP-tT-92O"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YgS-Tw-Ing" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1000,14 +1002,14 @@
                                 </constraints>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BKv-GT-VTd">
-                                <rect key="frame" x="36" y="109" width="248" height="1"/>
+                                <rect key="frame" x="36" y="65" width="248" height="1"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="0rg-aY-wjS"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descrição" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R7V-r4-jrv">
-                                <rect key="frame" x="36" y="69" width="248" height="40"/>
+                                <rect key="frame" x="36" y="25" width="248" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="VMJ-JD-WKv"/>
                                 </constraints>
@@ -1016,7 +1018,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hKe-oz-AC3">
-                                <rect key="frame" x="36" y="120" width="248" height="153.5"/>
+                                <rect key="frame" x="36" y="76" width="248" height="153.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1024,14 +1026,14 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1se-pC-7Br">
-                                <rect key="frame" x="36" y="323.5" width="248" height="1"/>
+                                <rect key="frame" x="36" y="279.5" width="248" height="1"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="lfH-Q9-TFY"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anexos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l6u-AI-vqa">
-                                <rect key="frame" x="36" y="283.5" width="248" height="40"/>
+                                <rect key="frame" x="36" y="239.5" width="248" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="3AF-pP-26I"/>
                                 </constraints>
@@ -1040,7 +1042,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Não há fotos anexadas" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FYX-tp-fQQ">
-                                <rect key="frame" x="56" y="374.5" width="208" height="24"/>
+                                <rect key="frame" x="56" y="330.5" width="208" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="BRu-Tf-rV4"/>
                                 </constraints>
@@ -1049,7 +1051,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JLa-cn-7Xb">
-                                <rect key="frame" x="36" y="344.5" width="248" height="140"/>
+                                <rect key="frame" x="36" y="300.5" width="248" height="184"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="u0N-aN-Hhg">
                                     <size key="itemSize" width="106" height="107"/>
@@ -1217,7 +1219,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descrição" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mmg-V8-OjY">
-                                <rect key="frame" x="36" y="84" width="248" height="40"/>
+                                <rect key="frame" x="36" y="40" width="248" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="2os-Xk-eM5"/>
                                 </constraints>
@@ -1226,14 +1228,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PgA-GI-97F">
-                                <rect key="frame" x="36" y="124" width="248" height="1"/>
+                                <rect key="frame" x="36" y="80" width="248" height="1"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="F5C-L3-RiD"/>
                                 </constraints>
                             </view>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gWn-du-MvY">
-                                <rect key="frame" x="36" y="145" width="248" height="153.5"/>
+                                <rect key="frame" x="36" y="101" width="248" height="153.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1241,14 +1243,14 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zqk-5z-CeN">
-                                <rect key="frame" x="36" y="348.5" width="248" height="1"/>
+                                <rect key="frame" x="36" y="304.5" width="248" height="1"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="PAM-MA-GpQ"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Não há fotos anexadas" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BPi-60-u8N">
-                                <rect key="frame" x="56" y="399.5" width="208" height="24"/>
+                                <rect key="frame" x="56" y="355.5" width="208" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="J4u-hL-czk"/>
                                 </constraints>
@@ -1257,7 +1259,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anexos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M60-CM-KmK">
-                                <rect key="frame" x="36" y="308.5" width="248" height="40"/>
+                                <rect key="frame" x="36" y="264.5" width="248" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="GTA-QA-wQv"/>
                                 </constraints>
@@ -1596,11 +1598,12 @@
         </scene>
     </scenes>
     <resources>
-        <image name="avatar2" width="97" height="107"/>
+        <image name="avatar0" width="101" height="105"/>
         <image name="avisosIcon" width="37" height="36"/>
         <image name="logo" width="261" height="113"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="3tY-Rw-f85"/>
+        <segue reference="HHd-ok-M42"/>
+        <segue reference="8RP-tT-92O"/>
     </inferredMetricsTieBreakers>
 </document>
